%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: "Animator_Controller_Heladero_Enemies\xE7"
  serializedVersion: 5
  m_AnimatorParameters:
  - m_Name: MoveZ
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  - m_Name: MoveX
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 0}
  m_AnimatorLayers:
  - serializedVersion: 5
    m_Name: Base Layer
    m_StateMachine: {fileID: 7815626797816522526}
    m_Mask: {fileID: 0}
    m_Motions: []
    m_Behaviours: []
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &871310975259870363
BlendTree:
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Blend Tree
  m_Childs:
  - serializedVersion: 2
    m_Motion: {fileID: 1827226128182048838, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -4339847295923380729, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.125
    m_Position: {x: -1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -580817401016901288, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.25
    m_Position: {x: 1, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 6164674085812920347, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.375
    m_Position: {x: 0, y: -1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 2711879707673178317, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.5
    m_Position: {x: 0, y: 1}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: 1669965332296602591, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.625
    m_Position: {x: -0.707107, y: -0.707107}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -75929476033304633, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.75
    m_Position: {x: -0.707107, y: 0.707107}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -7192913585448816569, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 0.875
    m_Position: {x: 0.707107, y: -0.707107}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  - serializedVersion: 2
    m_Motion: {fileID: -1588038089557127821, guid: 72b901ad5a672e74985d429057f3a225, type: 3}
    m_Threshold: 1
    m_Position: {x: 0.707107, y: 0.707107}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_DirectBlendParameter: MoveZ
    m_Mirror: 0
  m_BlendParameter: MoveX
  m_BlendParameterY: MoveZ
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_NormalizedBlendValues: 0
  m_BlendType: 2
--- !u!1102 &1030763623146462137
AnimatorState:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Movement
  m_Speed: 1
  m_CycleOffset: 0
  m_Transitions: []
  m_StateMachineBehaviours: []
  m_Position: {x: 50, y: 50, z: 0}
  m_IKOnFeet: 0
  m_WriteDefaultValues: 1
  m_Mirror: 0
  m_SpeedParameterActive: 0
  m_MirrorParameterActive: 0
  m_CycleOffsetParameterActive: 0
  m_TimeParameterActive: 0
  m_Motion: {fileID: 871310975259870363}
  m_Tag: 
  m_SpeedParameter: 
  m_MirrorParameter: 
  m_CycleOffsetParameter: 
  m_TimeParameter: 
--- !u!1107 &7815626797816522526
AnimatorStateMachine:
  serializedVersion: 6
  m_ObjectHideFlags: 1
  m_CorrespondingSourceObject: {fileID: 0}
  m_PrefabInstance: {fileID: 0}
  m_PrefabAsset: {fileID: 0}
  m_Name: Base Layer
  m_ChildStates:
  - serializedVersion: 1
    m_State: {fileID: 1030763623146462137}
    m_Position: {x: 30, y: 0, z: 0}
  m_ChildStateMachines: []
  m_AnyStateTransitions: []
  m_EntryTransitions: []
  m_StateMachineTransitions: {}
  m_StateMachineBehaviours: []
  m_AnyStatePosition: {x: 0, y: -100, z: 0}
  m_EntryPosition: {x: 50, y: 120, z: 0}
  m_ExitPosition: {x: 800, y: 120, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
  m_DefaultState: {fileID: 1030763623146462137}
